2007-09-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pdf.c (WritePDFImage): Fix writing PDF with CCITT
	compression.  Addresses SourceForge bug 1209177 "TIFF to PDF CCITT
	compression fails".

2007-09-14  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/mat.c Ability to read multiple images from one MAT file.
        changed ExtendedSignedIntegralType to magick_off_t that better corresponds to file positioning.

2007-09-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pdf.c (WritePDFImage): Use ThumbnailImage() to create
	thumbnail.
	* coders/preview.c (WritePreviewImage): Use ThumbnailImage() to
	create thumbnail.
	* coders/xpm.c (WritePICONImage): Use ThumbnailImage() to create
	thumbnail.

2007-09-14  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/mat.c Several warnings has been suppressed.

2007-09-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): Fix writing to pipes and other
	non-seekable output destinations.
	* magick/blob.c (WriteBlobFile): New function to copy a disk file
	to a blob stream.
	* magick/profile.c (ProfileImage): Fix removing profiles.

2007-09-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (png_flush_data): Don't invoke SyncBlob() since it
	does far more than force data to the output file.
	(ReadPNGImage): Make sure that PNG read errors are reported to the
	user.
	* coders/jpeg.c (TerminateDestination): Don't invoke SyncBlob()
	since it does far more than force data to the output file.
	* magick/blob.c (SyncBlob): Remove from public interface.

2007-09-12  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/mat.c Allowed to read signed integer matrices.
	Fixed loop break.

2007-09-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): Ensure that selected photometric
	most closely matches the user's expectation.  Remove compression
	if requested compression type is not compatible with the selected
	photometric.
