@@ -2,4 +2,3 @@ SRCDIR=`dirname $0`
 SRCDIR=`cd $SRCDIR && pwd`
 TOPSRCDIR=`cd $srcdir && pwd`
 cd tests || exit 1
-
